# adesha

./: .gitignore  README.md  adesha.py  pyproject.toml
.github/workflows/: pages.yml
adesha/: lexer.py
docs/: demo_zloka_transcript.txt
docs/lessons/: lesson0.md  lesson0_final.adesha
examples/: anumana.adesha  blocks.adesha  factorial.adesha  function.adesha  ganana.adesha  list.adesha  namaste.adesha  pratidhvani.adesha  sarani108.adesha  while.adesha  zloka_mudra.adesha
playground/: README.md  examples.json  index.html  keywords.json  main.js  style.css
playground/py/: aos_asm.py
playground/py/adesha/: __init__.py  errors.py  expr.py  interp.py
scripts/: build_playground.py
tests/: conftest.py  test_a1.py  test_a2.py  test_examples.py  test_expr.py  test_keywords.py  test_lane_residue.py  test_lexer.py
tests/reports/: c2_parity_report.md
